objects/Prospect__c.object
<CustomObject>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects (Amusement Operator)</relationshipLabel>
        <relationshipName>Prospects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Date__c</fullName>
        <label>Assigned To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_To_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert To Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Establishment_Type2__c</fullName>
        <label>Accel Establishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accel_Establishment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_License_Number__c</fullName>
        <label>Gaming License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gaming_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gaming Operator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects (Gaming Operator)</relationshipLabel>
        <relationshipName>Prospects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liquor_License_Type__c</fullName>
        <label>Liquor License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Off Premise</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>No Liquor License</fullName>
                </value>
                <value>
                    <fullName>Value TBD</fullName>
                    <isActive>false</isActive>
                    <label>Value TBD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Fit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Fit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prospect_Source__c</fullName>
        <label>Prospect Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Submitted Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Type__c</fullName>
        <label>Prospect Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>Alex_P_Prospects_Nebraska</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Prospect_Type__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Alex Plummer</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Alex P. Prospects - Nebraska</label>
        <sharedTo>
            <group>List_Views_NE_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alexis_R_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Alexis Rhodes</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alexis R. Prospects - Nebraska</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alexis_R_Prospects_North_Carolina1</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Alexis Rhodes</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alexis R. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Amy_D_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Amy Davis</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Amy D. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blake_C_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Blake Campbell</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Blake C. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brendan_Regan_Prospect_List_NEBRASKA</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Prospect_Type__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Brendan Regan</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Brendan R. Prospects - Nebraska</label>
        <sharedTo>
            <group>List_View_GA_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carlisha_S_Prospects_Nebraska</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Prospect_Type__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Carlisha Scott</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Carlisha S. Prospects - Nebraska</label>
        <sharedTo>
            <group>List_Views_NE_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carlisha_S_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Carlisha Scott</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Carlisha S. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cory_Shannon_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Cory Shannon</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Cory Shannon Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Courtney_W_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Courtney Walker</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Courtney W. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Derand_W_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Derand Walker</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Derand W. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Evanna_B_Prospects_Nebraska</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Evanna Bonese</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Evanna B. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NE_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greg_B_Prospects_North_Carolina</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Gregory Bell</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Greg B. Prospects - North Carolina</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Josie_B_Prospects_Nebraska</fullName>
        <columns>Assigned_To_Date__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>No_Fit__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Josie Bird</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <filters>
            <field>No_Fit__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prospect_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted Lead</value>
        </filters>
        <label>Josie B. Prospects - Nebraska</label>
        <sharedTo>
            <group>List_Views_NC_Sales</group>
            <group>List_Views_NE_Sales</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prospect_State_must_be_in_2_letter_form</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 State__c  &lt;&gt;&quot;AL&quot;,
State__c &lt;&gt;&quot;AK&quot;,
State__c &lt;&gt;&quot;AZ&quot;,
State__c &lt;&gt;&quot;AR&quot;,
State__c &lt;&gt;&quot;CA&quot;,
State__c &lt;&gt;&quot;CO&quot;,
State__c &lt;&gt;&quot;CT&quot;,
State__c &lt;&gt;&quot;DE&quot;,
State__c &lt;&gt;&quot;FL&quot;,
State__c &lt;&gt;&quot;GA&quot;,
State__c &lt;&gt;&quot;IL&quot;,
State__c &lt;&gt;&quot;HI&quot;,
State__c &lt;&gt;&quot;ID&quot;,
State__c &lt;&gt;&quot;IN&quot;,
State__c &lt;&gt;&quot;IA&quot;,
State__c &lt;&gt;&quot;KS&quot;,
State__c &lt;&gt;&quot;KY&quot;,
State__c &lt;&gt;&quot;LA&quot;,
State__c &lt;&gt;&quot;ME&quot;,
State__c &lt;&gt;&quot;MD&quot;,
State__c&lt;&gt;&quot;MA&quot;,
State__c &lt;&gt;&quot;MI&quot;,
State__c &lt;&gt;&quot;MN&quot;,
State__c &lt;&gt;&quot;MS&quot;,
State__c &lt;&gt;&quot;MO&quot;,
State__c &lt;&gt;&quot;MT&quot;,
State__c &lt;&gt;&quot;NE&quot;,
State__c &lt;&gt;&quot;NV&quot;,
State__c &lt;&gt;&quot;NH&quot;,
State__c &lt;&gt;&quot;NJ&quot;,
State__c &lt;&gt;&quot;NM&quot;,
State__c &lt;&gt;&quot;NY&quot;,
State__c &lt;&gt;&quot;NC&quot;,
State__c &lt;&gt;&quot;ND&quot;,
State__c &lt;&gt;&quot;OH&quot;,
State__c &lt;&gt;&quot;OK&quot;,
State__c&lt;&gt;&quot;OR&quot;,
State__c &lt;&gt;&quot;PA&quot;,
State__c &lt;&gt;&quot;RI&quot;,
State__c &lt;&gt;&quot;SC&quot;,
State__c &lt;&gt;&quot;SD&quot;,
State__c &lt;&gt;&quot;TN&quot;,
State__c &lt;&gt;&quot;TX&quot;,
State__c &lt;&gt;&quot;UT&quot;,
State__c &lt;&gt;&quot;VT&quot;,
State__c &lt;&gt;&quot;VA&quot;,
State__c &lt;&gt;&quot;WA&quot;,
State__c&lt;&gt;&quot;WV&quot;,
State__c &lt;&gt;&quot;WI&quot;,
State__c &lt;&gt;&quot;WY&quot;)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>State must be in 2-letter format.</errorMessage>
    </validationRules>
</CustomObject>